--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": [
         "linkedlist",
         "Tree",
-        "Arrays"
+        "Number Theory and Maths",
+        "Arrays",
+        "Stack"
     ]
 }
