--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,62 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch GfgShiftSquares",
+            "request": "launch",
+            "mainClass": "GfgShiftSquares",
+            "projectName": "MyDSALearning_4175ba0e"
+        },
+        {
+            "type": "java",
+            "name": "Launch Lapindrome",
+            "request": "launch",
+            "mainClass": "Lapindrome",
+            "projectName": "MyDSALearning_4175ba0e"
+        },
+        {
+            "type": "java",
+            "name": "Launch Codechef",
+            "request": "launch",
+            "mainClass": "Codechef",
+            "projectName": "MyDSALearning_4175ba0e"
+        },
+        {
+            "type": "java",
+            "name": "Launch ReplaceCheck",
+            "request": "launch",
+            "mainClass": "ReplaceCheck",
+            "projectName": "MyDSALearning_4175ba0e"
+        },
+        {
+            "type": "java",
+            "name": "Launch DigitOrCharacter",
+            "request": "launch",
+            "mainClass": "DigitOrCharacter",
+            "projectName": "MyDSALearning_4175ba0e"
+        },
+        {
+            "type": "java",
+            "name": "Launch anagram",
+            "request": "launch",
+            "mainClass": "anagram",
+            "projectName": "MyDSALearning_4175ba0e"
+        },
+        {
+            "type": "java",
+            "name": "Launch LearnArrayDequeue",
+            "request": "launch",
+            "mainClass": "LearnArrayDequeue",
+            "projectName": "MyDSALearning_4175ba0e"
+        },
+        {
+            "type": "java",
+            "name": "Launch SubsequenceCheck",
+            "request": "launch",
+            "mainClass": "SubsequenceCheck",
+            "projectName": "MyDSALearning_4175ba0e"
+        },
+        {
+            "type": "java",
             "name": "Launch ReverseStack",
             "request": "launch",
             "mainClass": "ReverseStack",
